added sessions controller for user auth calls

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,5 @@
 {
   "editor.defaultFormatter": "Shopify.ruby-extensions-pack",
-  "workbench.colorTheme": "Spinel"
+  "workbench.colorTheme": "Spinel",
+  "editor.formatOnSave": true
 }
